Added figures ... changed the categories to just beauty

--- a/Data200_ProjectWriteup.ipynb
+++ b/Data200_ProjectWriteup.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "This project aims to use Amazon metadata (e.g., product description, price, brand) to predict the Amazon sales rank within a specific category of data. The categories this project focuses on are `software` and `all beauty` products. \n",
+    "This project aims to use Amazon metadata (e.g., product description, price, brand) to predict the Amazon sales rank within a specific category of data. The categories this project focuses on are All Beauty products. \n",
     "\n",
     "## Motivation\n",
     "Our target for this project is new venders who are interested in adding a product to Amazon. This model is helpful for them to understand what information (e.g., keywords in the description, specific brands/brand recognition, price, etc) can be used to improve a product's sales rank within its category.\n",
@@ -40,7 +40,7 @@
     "## Methodolgy\n",
     "\n",
     "### Description of the data:\n",
-    "This report studies two datasets from Amazon sales. The reviews datasets and the metadata dataset. This study is on three categories of products on Amazon: Musical Instruments, Softwares and Beauty. The attributes of the metadata dataset along with a short description for each attribute is provided below:\n",
+    "This report studies two datasets from Amazon sales. The reviews datasets and the metadata dataset. This study is on All Beauty products on Amazon. The attributes of the metadata dataset along with a short description for each attribute is provided below:\n",
     "- `asin` - ID of the product, e.g. 0000031852\n",
     "- `title` - name of the product\n",
     "- `feature` - bullet-point format features of the product\n",
@@ -68,7 +68,6 @@
     "- `reviewTime` - time of the review (raw)\n",
     "- `image` - images that users post after they have received the product\n",
     "\n",
-    "For the reviews dataset, we are specifically looking at the 5-core reviews. A k-core review dataset is a suset of the entire reviews dataset in which all users and items have at least 5 reviews. This dataset is smaller and less expensive on the computer memory.\n",
     "\n",
     "### Exploratory Data Analysis\n",
     "#### Missing prices:\n",
@@ -112,36 +111,34 @@
     "## Summary of results:\n",
     "\n",
     "### Missing prices:\n",
-    "The metadata dataset for the Software category has several products with missing prices. This initially came as a surprise and is also concerning as price is an important feature in our model. About 75% of the products were missing prices. \n",
-    "It was found that most of these were old products that were once sold on Amazon but were now replaced by their better/improved versions. The image below lists one such product. Notice, how the product landing page says **Currently Unavailable**.\n",
+    "The metadata dataset for the All Beauty category has several products with missing prices. This initially came as a surprise and is also concerning as price is an important feature in our model. About 65% of the products were missing prices. \n",
+    "It was found that a lot of these were products that are no longer sold on Amazon and are now replaced by their better/improved versions.\n",
     "\n",
-    "**** Insert figure from Amazon ****\n",
-    "\n",
-    "Certain visualizations can help us explore this further. Fig. aaa shows a scatter plot between the proportions of products missing prices for a brand vs the total products that brand ever sold. It is important to note that the X axis is not the total sales but the total products by the brand that are listed on Amazon.\n",
+    "Certain visualizations can help us explore this further. The figure below shows a scatter plot between the proportions of products missing prices for a brand vs the total products that brand ever sold. It is important to note that the X axis is not the total sales but the total products by the brand that are listed on Amazon.\n",
     "\n",
     "\n",
-    "**** Insert scatter ****\n",
+    "![EDA1](figures/EDA_Prices_2.png)\n",
     "\n",
     "\n",
-    "But this probably includes a lot of brands which only ever sold a few products and shut down(notice so many scatter dots at y =1 close to x=0). If we only include brands which have atleast a few products with active prices and have sold a minimum of 100 products on Amazon we see that most of the scatter is above y = 0.5.\n",
+    "But this probably includes a lot of brands which only ever sold a few products and shut down(notice so many scatter dots at y =1 close to x=0). If we only include brands which have atleast a few products with active prices on Amazon we see a very positive correlation between Y and X.\n",
     "\n",
     "\n",
-    "**** Insert filtered scatter ****\n",
+    "![EDA2](figures/EDA_Prices_2.png)\n",
     "\n",
-    "This shows how big brands especially in the tech industry keep improving and releasing new/revised products to survive the Amazon marketplace. It is astonishing how quickly the inventory has to evolve. The right most point is Microsoft with a total of roughly 1200 products in the dataset it is only actively selling about 175.\n",
+    "Figure above shows how bigger brands in the industr industry keep improving and releasing new/revised products to survive the Amazon marketplace. It is astonishing how quickly the inventory has to evolve.\n",
     "\n",
     "### Sentiment of reviews:\n",
-    "We again look at the Software category, however, this analysis can be performed for all the categories in this study. Sentiment itself is not a feature of this model but this analysis was done to see how the sentiment varies with the prices of products.\n",
+    "Sentiment itself is not a feature of this model but this analysis was done to see how the sentiment varies with the ratings given for products.\n",
     "To get the polarity of the review text, VADER was used. \n",
     "As a part of the data cleaning process, all the punctuation was removed and the text was converted to lower case. Once extracted, we first observe polarity vs overall rating in each review. \n",
     "\n",
-    "**** Insert box plot ****\n",
+    "![EDA3](figures/EDA_Sentiment_1.png)\n",
     "\n",
-    "Overall, it seems there is a positive correlation between polarity and the rating as one would expect, however as the rating goes from 4.0  to 5.0 we observe a dip in the box plot statistics. We further explore this by differentiating the reviews over verified and unverified users.\n",
+    "Overall, it seems there is a positive correlation between polarity and the rating as one would expect. We further explore this by differentiating the reviews over verified and unverified users.\n",
     "\n",
-    "**** Insert box plot with hue****\n",
+    "![EDA4](figures/EDA_Sentiment_2.png)\n",
     "\n",
-    "It seems the dip is largely observed due to the reviews by unverified users. This sheds some light on the seriousness of reviews by unverfied users. However, one can also argue that a reviewr reaches a certain level of saturation in praising a product at 4.0 rating. One should also note that a lot of reviews are bound to have spelling mistakes which would not be recognized by VADER.\n",
+    "It seems that unverified users have a wider spread in the polarity at every rating. This is mainly because the number of verified users far exceeds the number of unverified users in this category. One should also note that a lot of reviews are bound to have spelling mistakes which would not be recognized by VADER.\n",
     "\n",
     "\n",
     "### Description of methods:\n",
@@ -156,14 +153,6 @@
     "- Top 500 bag of words included in the descriptions\n",
     "- One hot encoding of brand\n",
     "By squaring the price and brand count, we are allowing the model to train on a non-linear dataset. Furthermore, we standardize all numerical features included in our model (brand count, brand count squared, price, and price squared.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Summary of results:\n",
     "\n"
    ]
   },
@@ -304,9 +293,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "pygments_lexer": "ipython3"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
