--- a/Data200_ProjectWriteup.ipynb
+++ b/Data200_ProjectWriteup.ipynb
@@ -117,13 +117,13 @@
     "Certain visualizations can help us explore this further. The figure below shows a scatter plot between the proportions of products missing prices for a brand vs the total products that brand ever sold. It is important to note that the X axis is not the total sales but the total products by the brand that are listed on Amazon.\n",
     "\n",
     "\n",
-    "![EDA1](figures/EDA_Prices_2.png)\n",
+    "![EDA1](../figures/EDA_Prices_2.png)\n",
     "\n",
     "\n",
     "But this probably includes a lot of brands which only ever sold a few products and shut down(notice so many scatter dots at y =1 close to x=0). If we only include brands which have atleast a few products with active prices on Amazon we see a very positive correlation between Y and X.\n",
     "\n",
     "\n",
-    "![EDA2](figures/EDA_Prices_2.png)\n",
+    "![EDA2](../figures/EDA_Prices_2.png)\n",
     "\n",
     "Figure above shows how bigger brands in the industr industry keep improving and releasing new/revised products to survive the Amazon marketplace. It is astonishing how quickly the inventory has to evolve.\n",
     "\n",
@@ -132,11 +132,11 @@
     "To get the polarity of the review text, VADER was used. \n",
     "As a part of the data cleaning process, all the punctuation was removed and the text was converted to lower case. Once extracted, we first observe polarity vs overall rating in each review. \n",
     "\n",
-    "![EDA3](figures/EDA_Sentiment_1.png)\n",
+    "![EDA3](../figures/EDA_Sentiment_1.png)\n",
     "\n",
     "Overall, it seems there is a positive correlation between polarity and the rating as one would expect. We further explore this by differentiating the reviews over verified and unverified users.\n",
     "\n",
-    "![EDA4](figures/EDA_Sentiment_2.png)\n",
+    "![EDA4](../figures/EDA_Sentiment_2.png)\n",
     "\n",
     "It seems that unverified users have a wider spread in the polarity at every rating. This is mainly because the number of verified users far exceeds the number of unverified users in this category. One should also note that a lot of reviews are bound to have spelling mistakes which would not be recognized by VADER.\n",
     "\n",
@@ -268,6 +268,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "As mentioned in the Limitations section, there are several ways we could further investigate the modeling:\n",
+    "\n",
+    "- We could look into the unused features that were not incorporated due to their difficulty in analysis, such as image and technical description.\n",
+    "\n",
+    "- We could try using a deep neural network to train on the data.\n",
+    "\n",
+    "- We could use a different metric other than the $r^2$ coefficient to train and validate the models."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Works Cited:\n",
     "- B. Singh, P. Kumar, N. Sharma and K. P. Sharma, 'Sales Forecast for Amazon Sales with Time Series Modeling,' 2020 First International Conference on Power, Control and Computing Technologies (ICPC2T), 2020, pp. 38-43, doi: 10.1109/ICPC2T48082.2020.9071463.\n",
     "- AIHello, 'Predicting Amazon sales using Deep Learning,' 2019  AIHello.com, Retrieved from: https://www.aihello.com/resources/blog/2020/04/13/predicting-amazon-sales-using-deep-learning/."
@@ -293,22 +306,9 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
