Add more details for analysis and writeup

--- a/narrative/Data200_ProjectWriteup.ipynb
+++ b/narrative/Data200_ProjectWriteup.ipynb
@@ -69,13 +69,18 @@
     "- `image` - images that users post after they have received the product\n",
     "\n",
     "\n",
-    "### Exploratory Data Analysis\n",
-    "#### Missing prices:\n",
     "### Description of methods:\n",
     "#### Feature Engineering\n",
-    "- One Hot Encoding: We chose to use a one hot encoding of the descriptions because... \n",
+    "In our data analysis, we had to clean many of these variables. The products without prices had to be filtered when appropriate, as well as products with sales ranks in the wrong category. Sales rank and price had to be converted to float, and the brand and description had to be cleaned. The description had to be converted from a list to a string.\n",
+    "\n",
+    "We aggregated review data to obtain each product's average review rating, and merged it with the metadata table.\n",
+    "\n",
+    "We then performed the following feature engineering actions:\n",
+    "\n",
+    "- One Hot Encoding of title and description: We chose to use a bag-of-words one hot encoding of the title and description because it is unlikely for any word appearing more than once to have significant meaning, and while the word order may sometimes be significant, we believed that the general vocabulary used would be sufficient in most cases, and it allowed a much simpler model.\n",
     "- Price: Price is used as a feature in our model. The vendor can set the price of a product, and the price will affect a buyer's willingness to pay for the product.\n",
-    "- Price$^2$: Price squared is used as a feature in our model. Having the price squared will weight higher-priced items more heavily, which could negatively affect sales-rank. \n",
+    "- Price$^2$: Price squared is used as a feature in our model. Having the price squared will weight higher-priced items more heavily, which could negatively affect sales-rank.\n",
+    "- One Hot Encoding of brand: Top 100 brands were chosen to allow extra flexibility, without having too much useless informatin (uncommon brands are unlikely to be helpful if not many products with that brand are in the training set).\n",
     "- Brand Counts: This feature represents the number of total products of the same brand in the dataset. This could be a proxy for brand recognition, but also for products that are more ubiquitous. \n",
     "- Brand$^2$: Brand squared is used as a feature in our model to highlight more ubiquitous brands. \n",
     "\n",
@@ -141,6 +146,33 @@
     "It seems that unverified users have a wider spread in the polarity at every rating. This is mainly because the number of verified users far exceeds the number of unverified users in this category. One should also note that a lot of reviews are bound to have spelling mistakes which would not be recognized by VADER.\n",
     "\n",
     "\n",
+    "### Sales Rank vs Avg Rating:\n",
+    "Before determining the training label we want to use, we narrowed down to two candidates: Amazon product category sales rank, and the average review rating. We plotted the relationship between these two variables in the following three plots. Because of the peculiar structure of sales rank, which is heavily right-skewed, we tried using the log, square root, and raw values of sales rank.\n",
+    "\n",
+    "![EDA5](../figures/eda5.png)\n",
+    "![EDA6](../figures/eda6.png)\n",
+    "![EDA7](../figures/eda7.png)\n",
+    "\n",
+    "As we can see, the sales rank is distributed most evenly when a square root transformation is applied, so we will be using the square root sales rank from now on. Regardless, there is a negative correlation between sales rank and rating. This makes sense, because products with higher ratings are likely to sell better. However, the correlation is not very strong: only about 1% of variance in the rating is explained by sales rank. This shows that neither value alone is enough to infer the other, so we must decide which variable is more important for us to predict.\n",
+    "\n",
+    "We decided to predict the square root sales rank, because any seller is likely to be more concerned about sales revenue. In addition, it has a wider range of values, whereas the rating only ranges from 1 to 5, so it might cause trouble for linear models. \n",
+    "\n",
+    "### Price vs Sales Rank:\n",
+    "See following plot. Interestingly, there is a positive correlation between price and square root rank, which means more expensive products tend to sell worse. The correlation is very weak, but the residuals do not appear to form any pattern, meaning we do not need to further explore a more complicated relationship. This makes sense, because many factors other than price affect the sales performance. This preliminary analysis suggests that the price will be a useful feature to predict the sales rank, though we cannot jump to any conclusions before training the model.\n",
+    "\n",
+    "![EDA8](../figures/eda8.png)\n",
+    "\n",
+    "### Brand Distribution and Relationship with Sales Rank\n",
+    "\n",
+    "![EDA9](../figures/eda9.png)\n",
+    "\n",
+    "From the above plot, it appears that a few brands appear very frequently, while many other brands only occur in a few products.\n",
+    "\n",
+    "![EDA10](../figures/eda10.png)\n",
+    "![EDA11](../figures/eda11.png)\n",
+    "\n",
+    "Frequent brands seem to actually sell worse on average than infrequent brands, though with an extremely weak correlation. The brand count and top brand indicator seem both useful for prediction, but the one hot encoding for brand is likely also needed to take full advantage of the brand information.\n",
+    "\n",
     "### Description of methods:\n",
     "#### Feature Engineering\n",
     "The following features are included in our model:\n",
@@ -149,9 +181,9 @@
     "- Brand Counts: This feature represents the number of total products of the same brand in the dataset. This could be a proxy for brand recognition, but also for products that are more ubiquitous. \n",
     "- Brand$^2$: Brand squared is used as a feature in our model to highlight more ubiquitous brands. \n",
     "- Whether the brand is considered a _top brand_: if the brand appears more than 20 times in the test set.\n",
-    "- Top 100 bag of words included in the title\n",
-    "- Top 500 bag of words included in the descriptions\n",
-    "- One hot encoding of brand\n",
+    "- Top 100 bag of words included in the title. Common stop words in English were discarded, per the `sklearn` default.\n",
+    "- Top 500 bag of words included in the descriptions. Common stop words in English were discarded, per the `sklearn` default.\n",
+    "- One hot encoding of top 100 brands. Uncommon brands were unlikely to be useful and discarded.\n",
     "By squaring the price and brand count, we are allowing the model to train on a non-linear dataset. Furthermore, we standardize all numerical features included in our model (brand count, brand count squared, price, and price squared.\n",
     "\n"
    ]
@@ -237,14 +269,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Limitations:\n",
-    "An evaluation of your approach and discuss any limitations of the methods you used."
+    "## Limitations:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Exploratory Data Analysis\n",
+    "\n",
+    "Most relationships we explored between variables used scatterplots and linear regression, which, though effective, might not capture all possible relationships. In addition, we could've used inference to determine confidence intervals to be more rigorous.\n",
+    "\n",
     "### Model Predictions\n",
     "\n",
     "As mentioned earlier, the model is not able to accurately predict the sales rank without more data about the physical quality of the product, even if it is useful for evaluating a product listing alone.\n",
@@ -268,13 +303,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As mentioned in the Limitations section, there are several ways we could further investigate the modeling:\n",
+    "To improve the modeling in the future, there are a few aspects we could investigate:\n",
     "\n",
     "- We could look into the unused features that were not incorporated due to their difficulty in analysis, such as image and technical description.\n",
     "\n",
-    "- We could try using a deep neural network to train on the data.\n",
+    "- We could use more advanced textual features, perhaps taking into account sentiment or word order and count.\n",
     "\n",
-    "- We could use a different metric other than the $r^2$ coefficient to train and validate the models."
+    "- We performed the analysis with the All Beauty products category. The same analysis can be done with other categories to discover whether they behave differently.\n",
+    "\n",
+    "- As mentioned in the Limitations section, we could try training a neural network to further improve model accuracy. Or, we could use some proportional metric to place less emphasis on large label values.\n",
+    "\n",
+    "- In this project we attempted to predict the sales rank because it is likely more important to a merchant on Amazon. However, the average rating of a product is quite important as well, and moreover, the rating is often not strongly correlated with the sales rank. A future project could look into predicting product ratings as well.\n",
+    "\n",
+    "- For the exploratory data analysis, we could have used more advanced methods of inference such as confidence intervals."
    ]
   },
   {
@@ -285,24 +326,6 @@
     "- B. Singh, P. Kumar, N. Sharma and K. P. Sharma, 'Sales Forecast for Amazon Sales with Time Series Modeling,' 2020 First International Conference on Power, Control and Computing Technologies (ICPC2T), 2020, pp. 38-43, doi: 10.1109/ICPC2T48082.2020.9071463.\n",
     "- AIHello, 'Predicting Amazon sales using Deep Learning,' 2019  AIHello.com, Retrieved from: https://www.aihello.com/resources/blog/2020/04/13/predicting-amazon-sales-using-deep-learning/."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We performed the analysis with the All Beauty products category. The same analysis can be done with other categories to discover whether they behave differently.\n",
-    "\n",
-    "As mentioned in the Limitations section, we could try training a neural network to further improve model accuracy. Or, we could use some proportional metric to place less emphasis on large label values.\n",
-    "\n",
-    "In this project we attempted to predict the sales rank because it is likely more important to a merchant on Amazon. However, the average rating of a product is quite important as well, and moreover, the rating is often not strongly correlated with the sales rank. A future project could look into predicting product ratings as well."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
