--- a/analysis/Analysis Notebook.ipynb
+++ b/analysis/Analysis Notebook.ipynb
@@ -108,7 +108,7 @@
    "outputs": [],
    "source": [
     "url ='http://deepyeti.ucsd.edu/jianmo/amazon/metaFiles/meta_All_Beauty.json.gz'\n",
-    "filename = \"data/meta_All_Beauty.json.gz\"\n",
+    "filename = \"../data/meta_All_Beauty.json.gz\"\n",
     "metadata = load_data(url,filename)    "
    ]
   },
@@ -126,7 +126,7 @@
    "outputs": [],
    "source": [
     "url ='http://deepyeti.ucsd.edu/jianmo/amazon/metaFiles/All_Beauty.json.gz'\n",
-    "filename = \"data/All_Beauty.json.gz\"\n",
+    "filename = \"../data/All_Beauty.json.gz\"\n",
     "reviews = load_data(url,filename) "
    ]
   },
@@ -595,7 +595,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(''.join(open(\"data/vader_lexicon.txt\").readlines()[:10]))\n",
+    "vader_file = \"../data/vader_lexicon.txt\"\n",
+    "print(''.join(open(vader_file).readlines()[:10]))\n",
     "sent = pd.read_csv('data/vader_lexicon.txt',sep = '\\t',index_col=0,header=None, usecols = [0,1], names = ['token',\"polarity\"])\n",
     "sent.head()"
    ]
