Add more explanation for modeling and conclusion

--- a/narrative/Data200_ProjectWriteup.ipynb
+++ b/narrative/Data200_ProjectWriteup.ipynb
@@ -96,7 +96,9 @@
     "\n",
     "#### Modeling\n",
     "\n",
-    "The above features and label were used to train three machine learning models. The training data consisted of a random 80% of data points and the rest were used for validation.\n",
+    "The above features and label were used to train three machine learning models. We started with the simplest model and successively tried more complicated ones, for the reasons explained below. We believed that ridge regression, SVM, and random forest were representative of the major machine learning models that weren't overly complex like a neural network.\n",
+    "\n",
+    "The training data consisted of a random 80% of data points and the rest were used for validation.\n",
     "\n",
     "- Ridge Regression: The `sklearn` class `RidgeCV` was used to perform $l_2$ regularized linear regression.\n",
     "    - This model was used to investigate whether a simple linear model would perform well. Once it was shown that a support vector machine performed better, the nonlinear features price squared and brand count squared were added to reduce the model bias.\n",
@@ -316,6 +318,15 @@
     "- In this project we attempted to predict the sales rank because it is likely more important to a merchant on Amazon. However, the average rating of a product is quite important as well, and moreover, the rating is often not strongly correlated with the sales rank. A future project could look into predicting product ratings as well.\n",
     "\n",
     "- For the exploratory data analysis, we could have used more advanced methods of inference such as confidence intervals."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "In this project, we used the amazon recommender dataset to investigate whether the product metadata for a category can be used to predict a product's sales rank. After performing exploratory data analysis, we tested three models, ridge regression, the support vector machine, and random forest. The latter models performed moderately well, explaining more than 10% of the variance in square root sales rank. Therefore, we conclude that the information on a product product listing page is enough to produce an educated guess on its sales rank, but more data would be needed to achieve higher accuracy. We expect that although this model cannot completely predict product performance, it would be useful to the seller who is not able to access any additional data before the product is launched."
    ]
   },
   {
