Updated more on missing prices and reviews dataset not in modelling

--- a/narrative/Data200_ProjectWriteup.ipynb
+++ b/narrative/Data200_ProjectWriteup.ipynb
@@ -68,10 +68,14 @@
     "- `reviewTime` - time of the review (raw)\n",
     "- `image` - images that users post after they have received the product\n",
     "\n",
+    "None of the attributes in reviews dataset are useful features for the model, however the dataset is explored as part of EDA just out of curiousity.\n",
+    "\n",
     "\n",
     "### Description of methods:\n",
     "#### Feature Engineering\n",
-    "In our data analysis, we had to clean many of these variables. The products without prices had to be filtered when appropriate, as well as products with sales ranks in the wrong category. Sales rank and price had to be converted to float, and the brand and description had to be cleaned. The description had to be converted from a list to a string.\n",
+    "In our data analysis, we had to clean many of these variables. The products with sales ranks in the wrong category were filtered out of the dataset. Sales rank and price had to be converted to float, and the brand and description had to be cleaned. The description had to be converted from a list to a string.\n",
+    "\n",
+    "About 65% products were missing prices and were ultimately removed from the dataset as using an estimator on such a large number missing products would've induced significant bias in the modelling. Moreover, as discussed later, a lot of these products have been discontinued on Amazon.\n",
     "\n",
     "We aggregated review data to obtain each product's average review rating, and merged it with the metadata table.\n",
     "\n",
@@ -132,7 +136,8 @@
     "\n",
     "![EDA2](../figures/EDA_Prices_2.png)\n",
     "\n",
-    "Figure above shows how bigger brands in the industr industry keep improving and releasing new/revised products to survive the Amazon marketplace. It is astonishing how quickly the inventory has to evolve.\n",
+    "Figure above shows how bigger brands in the industry keep improving and releasing new/revised products to survive the Amazon marketplace. It is astonishing how quickly the inventory has to evolve.\n",
+    "\n",
     "\n",
     "### Sentiment of reviews:\n",
     "Sentiment itself is not a feature of this model but this analysis was done to see how the sentiment varies with the ratings given for products.\n",
@@ -340,35 +345,9 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.9"
-  },
-  "toc": {
-   "base_numbering": 1,
-   "nav_menu": {},
-   "number_sections": true,
-   "sideBar": true,
-   "skip_h1_title": false,
-   "title_cell": "Table of Contents",
-   "title_sidebar": "Contents",
-   "toc_cell": false,
-   "toc_position": {},
-   "toc_section_display": true,
-   "toc_window_display": false
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
