--- a/narrative/Data200_ProjectWriteup.ipynb
+++ b/narrative/Data200_ProjectWriteup.ipynb
@@ -96,30 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The square root of the sales rank was used as the label, because the distribution of the sales rank is more symmetric after this transformation than originally or when transformed with a logarithmic function, so we believed it would be easier for a linear model to predict.\n",
-    "\n",
-    "#### Modeling\n",
-    "\n",
-    "The above features and label were used to train three machine learning models. We started with the simplest model and successively tried more complicated ones, for the reasons explained below. We believed that ridge regression, SVM, and random forest were representative of the major machine learning models that weren't overly complex like a neural network.\n",
-    "\n",
-    "The training data consisted of a random 80% of data points and the rest were used for validation.\n",
-    "\n",
-    "- Ridge Regression: The `sklearn` class `RidgeCV` was used to perform $l_2$ regularized linear regression.\n",
-    "    - This model was used to investigate whether a simple linear model would perform well. Once it was shown that a support vector machine performed better, the nonlinear features price squared and brand count squared were added to reduce the model bias.\n",
-    "    - The `sklearn` built-in cross validation was used over several alpha values, in particular `np.exp(np.arange(-5, 5, 0.2) * np.log(10))`.\n",
-    "- Soft Margin Support Vector Machine: The `sklearn` class `SVR` was used to to train the data on a regularized SVM.\n",
-    "    - SVMs were used because the ridge regression model exhibited high bias, so we believed a nonlinear kernel might enable the model to make better predictions.\n",
-    "    - We compared the Gaussian, polynomial, linear, and sigmoid kernels. For each kernel, we performed manual regularization on the test $r^2$ of the model sales rank and chose the best $C$ hyperparameter.\n",
-    "- Vanilla Random Forest: The `sklearn` class `RandomForestRegressor` was used to train a random forest.\n",
-    "    - Because ridge regression and SVMs still had relatively high bias, we used tried using a random forest. Individual decision trees have low bias, so they allowed for an expressive model, but averaging over many decision trees would keep the variance relatively low. In addition, they would allow a nonlinear model, even more so than squared features and nonlinear kernels.\n",
-    "    - Manual regularlization using the test `r^2` allowed us to adjust the three hyperparameters, the number of estimators, maximum tree depth, and minimum leaf size."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Summary of results:\n",
+    "## Exploratory Data Analysis:\n",
     "\n",
     "### Missing prices:\n",
     "The metadata dataset for the All Beauty category has several products with missing prices. This initially came as a surprise and is also concerning as price is an important feature in our model. About 65% of the products were missing prices. \n",
@@ -193,6 +170,30 @@
     "- One hot encoding of top 100 brands. Uncommon brands were unlikely to be useful and discarded.\n",
     "By squaring the price and brand count, we are allowing the model to train on a non-linear dataset. Furthermore, we standardize all numerical features included in our model (brand count, brand count squared, price, and price squared.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary of Results \n",
+    "The square root of the sales rank was used as the label, because the distribution of the sales rank is more symmetric after this transformation than originally or when transformed with a logarithmic function, so we believed it would be easier for a linear model to predict.\n",
+    "\n",
+    "#### Modeling\n",
+    "\n",
+    "The above features and label were used to train three machine learning models. We started with the simplest model and successively tried more complicated ones, for the reasons explained below. We believed that ridge regression, SVM, and random forest were representative of the major machine learning models that weren't overly complex like a neural network.\n",
+    "\n",
+    "The training data consisted of a random 80% of data points and the rest were used for validation.\n",
+    "\n",
+    "- Ridge Regression: The `sklearn` class `RidgeCV` was used to perform $l_2$ regularized linear regression.\n",
+    "    - This model was used to investigate whether a simple linear model would perform well. Once it was shown that a support vector machine performed better, the nonlinear features price squared and brand count squared were added to reduce the model bias.\n",
+    "    - The `sklearn` built-in cross validation was used over several alpha values, in particular `np.exp(np.arange(-5, 5, 0.2) * np.log(10))`.\n",
+    "- Soft Margin Support Vector Machine: The `sklearn` class `SVR` was used to to train the data on a regularized SVM.\n",
+    "    - SVMs were used because the ridge regression model exhibited high bias, so we believed a nonlinear kernel might enable the model to make better predictions.\n",
+    "    - We compared the Gaussian, polynomial, linear, and sigmoid kernels. For each kernel, we performed manual regularization on the test $r^2$ of the model sales rank and chose the best $C$ hyperparameter.\n",
+    "- Vanilla Random Forest: The `sklearn` class `RandomForestRegressor` was used to train a random forest.\n",
+    "    - Because ridge regression and SVMs still had relatively high bias, we used tried using a random forest. Individual decision trees have low bias, so they allowed for an expressive model, but averaging over many decision trees would keep the variance relatively low. In addition, they would allow a nonlinear model, even more so than squared features and nonlinear kernels.\n",
+    "    - Manual regularlization using the test `r^2` allowed us to adjust the three hyperparameters, the number of estimators, maximum tree depth, and minimum leaf size."
    ]
   },
   {
