changing header sizes

--- a/narrative/Data200_ProjectWriteup.ipynb
+++ b/narrative/Data200_ProjectWriteup.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "\n",
     "### Description of methods:\n",
-    "#### Feature Engineering\n",
+    "### Feature Engineering\n",
     "In our data analysis, we had to clean many of these variables. The products with sales ranks in the wrong category were filtered out of the dataset. Sales rank and price had to be converted to float, and the brand and description had to be cleaned. The description had to be converted from a list to a string.\n",
     "\n",
     "About 65% products were missing prices and were ultimately removed from the dataset as using an estimator on such a large number missing products would've induced significant bias in the modelling. Moreover, as discussed later, a lot of these products have been discontinued on Amazon.\n",
@@ -96,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exploratory Data Analysis:\n",
+    "### Exploratory Data Analysis:\n",
     "\n",
     "### Missing prices:\n",
     "The metadata dataset for the All Beauty category has several products with missing prices. This initially came as a surprise and is also concerning as price is an important feature in our model. About 65% of the products were missing prices. \n",
@@ -157,7 +157,7 @@
     "\n",
     "Frequent brands seem to actually sell worse on average than infrequent brands, though with an extremely weak correlation. The brand count and top brand indicator seem both useful for prediction, but the one hot encoding for brand is likely also needed to take full advantage of the brand information.\n",
     "\n",
-    "### Description of methods:\n",
+    "## Description of methods:\n",
     "#### Feature Engineering\n",
     "The following features are included in our model:\n",
     "- Price: Price is used as a feature in our model. The vendor can set the price of a product, and the price will affect a buyer's willingness to pay for the product.\n",
